<resources>
    <string name="app_name">ProjectZero</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_welcome">My Nanodegree Apps!</string>
    <string name="welcome_button0">Spotify Streamer</string>
    <string name="welcome_button1">Scores App</string>
    <string name="welcome_button2">Library App</string>
    <string name="welcome_button3">Build It Bigger</string>
    <string name="welcome_button4">XYZ Reader</string>
    <string name="welcome_button5">Capstone: My Own App</string>


</resources>
